--- a/Learn-API/rainbow-badge-pokemon/pokeapi.html
+++ b/Learn-API/rainbow-badge-pokemon/pokeapi.html
@@ -8,8 +8,8 @@
     <title>Title in the tab</title>
 
     <!-- external CSS link -->
-    <link rel="stylesheet" href="css/normalize.css" />
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/normalize.css">
+		<link rel="stylesheet" href="css/style.css">
   </head>
   <body>
     <h1>Which Pokemon?</h1>
@@ -21,6 +21,6 @@
     <h2>Result</h2>
     <img id="pokeImg2" src="" alt="" />
 
-    <script type="text/javascript" src="js/pokeapi.js"></script>
+    <script type="text/javascript" src="pokeapi.js"></script>
   </body>
 </html>
