add type to pokemon api

--- a/Learn-API/rainbow-badge-pokemon/pokeapi.html
+++ b/Learn-API/rainbow-badge-pokemon/pokeapi.html
@@ -18,8 +18,13 @@
     <button type="button" name="button">Check Types</button>
 
     <img id="pokeImg1" src="" alt="" />
-    <h2>Result</h2>
+    <h2>Type</h2>
+    <h2 id="type1"></h2>
     <img id="pokeImg2" src="" alt="" />
+    <h2>Type</h2>
+    <h2 id="type2"></h2>
+    <h3></h3>
+
 
     <script type="text/javascript" src="pokeapi.js"></script>
   </body>
