review nasa api

--- a/Learn-API/objects-nasa/index.html
+++ b/Learn-API/objects-nasa/index.html
@@ -13,11 +13,12 @@
   </head>
   <body>
     <h1>Which date?</h1>
-    <input type="text" placeholder="YYYY-MM-DD" name="" value="" />
+    <input type="date" placeholder="YYYY-MM-DD" name="" value="" />
     <button type="button" name="button">Get Picture</button>
 
     <h2>Name</h2>
     <img src="" alt="" />
+    <iframe src="" title=""></iframe>
     <h3>Description</h3>
 
     <script type="text/javascript" src="js/main.js"></script>
