--- a/practice.html
+++ b/practice.html
@@ -22,7 +22,7 @@
     <title>Document</title>
   </head>
   <body>
-
+    <h1>Hello World</h1>
     <script type="text/javascript" src="practice.js"></script>
   </body>
 </html>
