--- a/Backend/node-coinflip/index.html
+++ b/Backend/node-coinflip/index.html
@@ -4,13 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="practice.css" />
     <title>Document</title>
   </head>
   <body>
-    <h1>Hello World</h1>
-    <button>Click Me!</button>
-    <div class="box"></div>
-    <script type="text/javascript" src="practice.js"></script>
+    <button>Flip a coin!</button>
+    <h1></h1>
+    <script type="text/javascript" src="main.js"></script>
   </body>
 </html>
