--- a/Backend/node-coinflip/public/index.html
+++ b/Backend/node-coinflip/public/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <button>Flip a coin!</button>
-    <h1></h1>
+    <h1>Hello World</h1>
     <script type="text/javascript" src="main.js"></script>
   </body>
 </html>
