--- a/crud-express-mongodb/index.html
+++ b/crud-express-mongodb/index.html
@@ -9,9 +9,10 @@
   <body>
     <h1>May Node and Express be with you</h1>
     <form action="/quotes" method="POST">
-      <input type="text" placeholder="name" name="name">
-      <input type="text" placeholder="quote" name="quote">
+      <input type="text" placeholder="name" name="name" />
+      <input type="text" placeholder="quote" name="quote" />
       <button type="submit">Submit</button>
     </form>
+    </ul>
   </body>
 </html>
