--- a/Learn-API/soccer-player-api/client-side-soccer-player/index.html
+++ b/Learn-API/soccer-player-api/client-side-soccer-player/index.html
@@ -1,3 +1,5 @@
+<!-- This page is the front-end website -->
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -9,6 +11,7 @@
   <body>
     <h1>Get Soccer Player's BirthName</h1>
     <h2>Result:</h2>
+    <input type="text">
     <button>Click Me!</button>
     <script type="text/javascript" src="js/main.js"></script>
   </body>
