updating soccer player database

--- a/Learn-API/soccer-player-api/client-side-soccer-player/index.html
+++ b/Learn-API/soccer-player-api/client-side-soccer-player/index.html
@@ -9,10 +9,12 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>Get Soccer Player's BirthName</h1>
-    <h2>Result:</h2>
-    <input type="text">
-    <button>Click Me!</button>
+    <h1>The Beautiful Game</h1>
+    <form action ="/players" method="POST">
+      <input type="text" placeholder="name" name="name">
+      <input type="text" placeholder="club" name="club">
+      <button type="submit">Submit</button>
+    </form>
     <script type="text/javascript" src="js/main.js"></script>
   </body>
 </html>
